 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 5
============
* [DanielPharos]: Fixed long-standing pointer corruption bug when loading poly faces. This was triggering errors when using
          - FastMM. Now the map editor opens up properly with FastMM!

* [cdunde]: Model editor, Setup component bbox vertex assignment support.

* [cdunde/DanielPharos]: Model editor, Added bone and bounding boxes support to Keyframe Linear Interpolation function.

* [cdunde]: Add support for BBoxes and updated the Kingpin importer to process its BBoxes.

* [cdunde]: Revamped Bounding Box system for more flexibility with model formats that do not have bones, only single or multi components.

6.6.0 Beta 4
============
* [cdunde/DanielPharos]: Started support for Kingpin MDX model format with animation and skin support.

* [cdunde/DanielPharos]: Added Half-Life 2 importer animation support with bone, attachment and bbox movement.

* [cdunde/DanielPharos]: Updated Model Editor Camera Position system with Hotkeys to take quick shots of both Editor and Floating 3D views,
          - kept in separate folders for both Standard modes and True3D modes with Hotkeys to scroll through those shots.

* [cdunde]: Added cameraview saving duplicators and search systems, like in the Map Editor, to the Model Editor.
          - Also added a Hotkey F5 function for making those duplicators by simply pressing that key.

* [cdunde/DanielPharos]: Updating fixed for the Model Editor of the Texture Browser's Used Textures folder.

* [cdunde]: Updating of Used Textures in the Model Editor Texture Browser for all imported skin textures